force-app/main/default/objects/Event_Speaking_Engagement__c/Event_Speaking_Engagement__c.object-meta.xml
<CustomObject>
    <label>Event Speaking Engagement</label>
    <nameField>
        <label>Speaker name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Speaking Engagements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>