force-app/main/default/objects/Event_Speaking_Engagement__c/fields/Event_Session__c.field-meta.xml
<CustomField>
    <fullName>Event_Session__c</fullName>
    <label>Event Session</label>
    <referenceTo>Event_Session__c</referenceTo>
    <relationshipLabel>Event Speaking Engagements</relationshipLabel>
    <relationshipName>Speaker_to_Session_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>