force-app/main/default/objects/Event_Speaking_Engagement__c/fields/Event_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Event_Speaker__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event Speaker</label>
    <referenceTo>Event_Speaker__c</referenceTo>
    <relationshipLabel>Event Speaking Engagements</relationshipLabel>
    <relationshipName>Speaker_to_Session_Links</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>