force-app/main/default/objects/Event_Speaking_Engagement__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <description>comma separated list of ids</description>
    <label>order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>