force-app/main/default/objects/Event_Speaking_Engagement__c/fields/Speaker_Role__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Role__c</fullName>
    <label>Speaker Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Moderator</fullName>
            </value>
            <value>
                <fullName>Facilitator</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Panelist</fullName>
            </value>
            <value>
                <fullName>Introduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>